plugins {
    id 'org.owasp.dependencycheck' version '9.2.0'
    id 'scala'
    id 'java-library'
    id 'io.gatling.gradle' version '3.14.3'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(Copy).all{
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

repositories {
    mavenCentral()
}



gatling {
    gatlingVersion '3.14.3'
    scalaVersion '2.13.11'
    jvmArgs = ['-Xms2048m', '-Xmx4096m']
    jvmArgs = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
}

sourceSets {
    gatling {
        scala {
            srcDir 'src/gatling/simulations'
        }
        resources {
            srcDir 'src/gatling/resources'
        }
    }
}